--- a/custom_components/mytpu/translations/en.json
+++ b/custom_components/mytpu/translations/en.json
@@ -10,22 +10,18 @@
         }
       },
       "meters": {
-        "title": "Meter Configuration",
-        "description": "Enter your meter information. You can find this in your MyTPU account under Usage. At least one meter must be configured.",
+        "title": "Select Meters",
+        "description": "Select the meters you want to track. At least one meter must be selected.",
         "data": {
-          "power_meter": "Power Meter Number",
-          "power_service_id": "Power Service ID",
-          "power_service_number": "Power Service Number",
-          "water_meter": "Water Meter Number",
-          "water_service_id": "Water Service ID",
-          "water_service_number": "Water Service Number"
+          "power_service": "Power Meter",
+          "water_service": "Water Meter"
         }
       }
     },
     "error": {
       "cannot_connect": "Failed to connect to MyTPU",
       "invalid_auth": "Invalid username or password",
-      "no_meters": "At least one meter must be configured",
+      "no_meters": "At least one meter must be selected",
       "unknown": "Unexpected error"
     },
     "abort": {
